--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -7,8 +7,11 @@
 html {
   scroll-behavior: smooth;
 }
+
 .menu-inactive {
-  display: none;
+  visibility: hidden;
+  height: 0;
+  width: 0;
 }
 
 @media (max-width: 319px) {
@@ -32,7 +35,7 @@ header
     position: fixed;
     top: 0;
     right: 0;
-    width: 100vw;
+    width: 320px;
     height: 100vh;
     z-index: 2;
   }
@@ -254,6 +257,98 @@ our friends
     letter-spacing: 0.06em;
     margin-bottom: 2.625rem;
   }
+  /* Modal Window */
+  .modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 3;
+    background: rgba(41, 41, 41, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .modal-hidden {
+    display: none;
+  }
+  .modal-content {
+    z-index: 4;
+    background: #fafafa;
+    width: 75vw;
+    height: auto;
+    border-radius: 0.5625rem;
+    display: flex;
+    position: relative;
+  }
+  .modal-left {
+    width: 21.875rem;
+    height: 21.875rem;
+    border-top-left-radius: 0.5625rem;
+    border-bottom-left-radius: 0.5625rem;
+    display: none;
+  }
+  .modal-right {
+    padding: 0.625rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  .modal-right h1 {
+    font-weight: 400;
+    font-size: 2.1875rem;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    text-align: center;
+    margin-bottom: 0.625rem;
+  }
+  .modal-right h2 {
+    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    text-align: center;
+    margin-bottom: 1.25rem;
+  }
+  .modal-right p {
+    font-weight: 400;
+    font-size: 0.8125rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    margin-bottom: 1.5rem;
+    text-align: justify;
+  }
+  .modal-right ul {
+    margin-left: 1em;
+  }
+  .modal-right ul > li {
+    color: rgba(241, 205, 179, 1);
+    margin-bottom: 0.375rem;
+  }
+  .modal-right ul > li > h3 {
+    font-weight: 700;
+    font-size: 0.9375rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    color: #000000;
+  }
+  .modal-right ul > li > h3 > span {
+    font-weight: 400;
+  }
+  .modal-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(70%, -100%);
+    width: 3.25rem;
+    height: 3.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #f1cdb3;
+    border-radius: 50%;
+    transition: all 300ms linear;
+  }
+  /* End of Modal Window */
   .friends-center {
     max-width: 1200px;
     margin: 0 auto 7.125rem;
@@ -273,6 +368,10 @@ our friends
     align-items: center;
     cursor: pointer;
     transition: all 300ms linear;
+  }
+  .single-card img {
+    border-top-left-radius: 0.5625rem;
+    border-top-right-radius: 0.5625rem;
   }
   .single-card:hover a {
     background: rgba(241, 205, 179, 1);
@@ -570,11 +669,22 @@ header
     position: fixed;
     top: 0;
     right: 0;
-    width: 100vw;
+    width: 320px;
     height: 100vh;
     z-index: 2;
     transition: all 300ms linear;
   }
+  .mobile-menu-background {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(41, 41, 41, 0.6);
+    display: none;
+  }
+
   .menu-inactive {
     transform: translateX(100%);
   }
@@ -586,7 +696,7 @@ header
   }
   .menu-top img {
     cursor: pointer;
-    transition: all 375ms linear;
+    transition: all 400ms linear;
   }
   .btn-rotate {
     transform: rotate(90deg);
@@ -799,6 +909,98 @@ our friends
     letter-spacing: 0.06em;
     margin-bottom: 2.625rem;
   }
+  /* Modal Window */
+  .modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 3;
+    background: rgba(41, 41, 41, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .modal-hidden {
+    display: none;
+  }
+  .modal-content {
+    z-index: 4;
+    background: #fafafa;
+    width: 75vw;
+    height: auto;
+    border-radius: 0.5625rem;
+    display: flex;
+    position: relative;
+  }
+  .modal-left {
+    width: 21.875rem;
+    height: 21.875rem;
+    border-top-left-radius: 0.5625rem;
+    border-bottom-left-radius: 0.5625rem;
+    display: none;
+  }
+  .modal-right {
+    padding: 0.625rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  .modal-right h1 {
+    font-weight: 400;
+    font-size: 2.1875rem;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    text-align: center;
+    margin-bottom: 0.625rem;
+  }
+  .modal-right h2 {
+    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    text-align: center;
+    margin-bottom: 1.25rem;
+  }
+  .modal-right p {
+    font-weight: 400;
+    font-size: 0.8125rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    margin-bottom: 1.5rem;
+    text-align: justify;
+  }
+  .modal-right ul {
+    margin-left: 1em;
+  }
+  .modal-right ul > li {
+    color: rgba(241, 205, 179, 1);
+    margin-bottom: 0.375rem;
+  }
+  .modal-right ul > li > h3 {
+    font-weight: 700;
+    font-size: 0.9375rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    color: #000000;
+  }
+  .modal-right ul > li > h3 > span {
+    font-weight: 400;
+  }
+  .modal-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(70%, -100%);
+    width: 3.25rem;
+    height: 3.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #f1cdb3;
+    border-radius: 50%;
+    transition: all 300ms linear;
+  }
+  /* End of Modal Window */
   .friends-center {
     max-width: 1200px;
     margin: 0 auto 7.125rem;
@@ -818,6 +1020,10 @@ our friends
     align-items: center;
     cursor: pointer;
     transition: all 300ms linear;
+  }
+  .single-card img {
+    border-top-left-radius: 0.5625rem;
+    border-top-right-radius: 0.5625rem;
   }
   .single-card:hover a {
     background: rgba(241, 205, 179, 1);
@@ -1305,6 +1511,94 @@ our friends
     letter-spacing: 0.06em;
     margin-bottom: 3.75rem;
   }
+  /* Modal Window */
+  .modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 3;
+    background: rgba(41, 41, 41, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .modal-hidden {
+    display: none;
+  }
+  .modal-content {
+    z-index: 4;
+    background: #fafafa;
+    width: 39.375rem;
+    height: auto;
+    border-radius: 0.5625rem;
+    display: flex;
+    position: relative;
+  }
+  .modal-left {
+    width: 21.875rem;
+    height: 21.875rem;
+    border-top-left-radius: 0.5625rem;
+    border-bottom-left-radius: 0.5625rem;
+  }
+  .modal-right {
+    padding: 0.625rem 0.5625rem 0.625rem 0.6875rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  .modal-right h1 {
+    font-weight: 400;
+    font-size: 2.1875rem;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    margin-bottom: 0.625rem;
+  }
+  .modal-right h2 {
+    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    margin-bottom: 1.25rem;
+  }
+  .modal-right p {
+    font-weight: 400;
+    font-size: 0.8125rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    margin-bottom: 1.25rem;
+  }
+  .modal-right ul {
+    margin-left: 1em;
+  }
+  .modal-right ul > li {
+    color: rgba(241, 205, 179, 1);
+    margin-bottom: 0.375rem;
+  }
+  .modal-right ul > li > h3 {
+    font-weight: 700;
+    font-size: 0.9375rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    color: #000000;
+  }
+  .modal-right ul > li > h3 > span {
+    font-weight: 400;
+  }
+  .modal-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(100%, -100%);
+    width: 3.25rem;
+    height: 3.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #f1cdb3;
+    border-radius: 50%;
+    transition: all 300ms linear;
+  }
+  /* End of Modal Window */
   .friends-center {
     max-width: 1200px;
     margin: 0 auto 3.75rem;
@@ -1324,6 +1618,10 @@ our friends
     align-items: center;
     cursor: pointer;
     transition: all 300ms linear;
+  }
+  .single-card img {
+    border-top-left-radius: 0.5625rem;
+    border-top-right-radius: 0.5625rem;
   }
   .single-card:hover a {
     background: rgba(241, 205, 179, 1);
@@ -1800,6 +2098,95 @@ our friends
     letter-spacing: 0.06em;
     margin-bottom: 3.75rem;
   }
+  /* Modal Window */
+  .modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 3;
+    background: rgba(41, 41, 41, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .modal-hidden {
+    display: none;
+  }
+  .modal-content {
+    z-index: 4;
+    background: #fafafa;
+    width: 56.25rem;
+    height: auto;
+    border-radius: 0.5625rem;
+    display: flex;
+    position: relative;
+  }
+  .modal-left {
+    width: 31.25rem;
+    height: 31.25rem;
+    border-top-left-radius: 0.5625rem;
+    border-bottom-left-radius: 0.5625rem;
+  }
+  .modal-right {
+    padding: 3.125rem 1.25rem 3.125rem 1.875rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  .modal-right h1 {
+    font-weight: 400;
+    font-size: 2.1875rem;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    margin-bottom: 0.625rem;
+  }
+  .modal-right h2 {
+    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    margin-bottom: 2.5rem;
+  }
+  .modal-right p {
+    font-weight: 400;
+    font-size: 0.9375rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    margin-bottom: 2.5rem;
+  }
+  .modal-right ul {
+    margin-left: 1em;
+  }
+  .modal-right ul > li {
+    color: rgba(241, 205, 179, 1);
+    margin-bottom: 0.6875rem;
+  }
+  .modal-right ul > li > h3 {
+    font-weight: 700;
+    font-size: 0.9375rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    color: #000000;
+  }
+  .modal-right ul > li > h3 > span {
+    font-weight: 400;
+  }
+  .modal-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(100%, -100%);
+    width: 3.25rem;
+    height: 3.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #f1cdb3;
+    border-radius: 50%;
+    transition: all 300ms linear;
+  }
+  /* End of Modal Window */
+
   .friends-center {
     max-width: 1200px;
     margin: 0 auto 3.75rem;
@@ -1808,9 +2195,7 @@ our friends
     column-gap: 5.625rem;
     position: relative;
   }
-  .single-card:nth-child(n + 4) {
-    display: none;
-  }
+
   .single-card {
     background: rgba(250, 250, 250, 1);
     border-radius: 0.5625rem;
@@ -1818,7 +2203,11 @@ our friends
     flex-direction: column;
     align-items: center;
     cursor: pointer;
-    transition: all 300ms linear;
+    transition: all 1 linear;
+  }
+  .single-card img {
+    border-top-left-radius: 0.5625rem;
+    border-top-right-radius: 0.5625rem;
   }
   .single-card:hover a {
     background: rgba(241, 205, 179, 1);
