--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -6,6 +6,11 @@
 html {
   scroll-behavior: smooth;
 }
+.menu-inactive {
+  visibility: hidden;
+  height: 0;
+  width: 0;
+}
 
 /* 
 ======================
@@ -101,6 +106,94 @@ our friends
   text-align: center;
   max-width: 25rem;
 }
+/* Modal Window */
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 3;
+  background: rgba(41, 41, 41, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal-hidden {
+  display: none;
+}
+.modal-content {
+  z-index: 4;
+  background: #fafafa;
+  width: 56.25rem;
+  height: auto;
+  border-radius: 0.5625rem;
+  display: flex;
+  position: relative;
+}
+.modal-left {
+  width: 31.25rem;
+  height: 31.25rem;
+  border-top-left-radius: 0.5625rem;
+  border-bottom-left-radius: 0.5625rem;
+}
+.modal-right {
+  padding: 3.125rem 1.25rem 3.125rem 1.875rem;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.modal-right h1 {
+  font-weight: 400;
+  font-size: 2.1875rem;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  margin-bottom: 0.625rem;
+}
+.modal-right h2 {
+  font-weight: 400;
+  font-size: 1.25rem;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  margin-bottom: 2.5rem;
+}
+.modal-right p {
+  font-weight: 400;
+  font-size: 0.9375rem;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+  margin-bottom: 2.5rem;
+}
+.modal-right ul {
+  margin-left: 1em;
+}
+.modal-right ul > li {
+  color: rgba(241, 205, 179, 1);
+  margin-bottom: 0.6875rem;
+}
+.modal-right ul > li > h3 {
+  font-weight: 700;
+  font-size: 0.9375rem;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.modal-right ul > li > h3 > span {
+  font-weight: 400;
+}
+.modal-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(100%, -100%);
+  width: 3.25rem;
+  height: 3.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #f1cdb3;
+  border-radius: 50%;
+  transition: all 300ms linear;
+}
+/* End of Modal Window */
 .cards {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -247,9 +340,6 @@ footer {
   color: rgba(241, 205, 179, 1);
 }
 
-.menu-inactive {
-  display: none;
-}
 @media (min-width: 768px) and (max-width: 1279px) {
   header {
     padding-left: 30px;
@@ -276,6 +366,94 @@ footer {
     column-gap: 5.2vw;
     margin-bottom: 2.5rem;
   }
+  /* Modal Window */
+  .modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 3;
+    background: rgba(41, 41, 41, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .modal-hidden {
+    display: none;
+  }
+  .modal-content {
+    z-index: 4;
+    background: #fafafa;
+    width: 39.375rem;
+    height: auto;
+    border-radius: 0.5625rem;
+    display: flex;
+    position: relative;
+  }
+  .modal-left {
+    width: 21.875rem;
+    height: 21.875rem;
+    border-top-left-radius: 0.5625rem;
+    border-bottom-left-radius: 0.5625rem;
+  }
+  .modal-right {
+    padding: 0.625rem 0.5625rem 0.625rem 0.6875rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  .modal-right h1 {
+    font-weight: 400;
+    font-size: 2.1875rem;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    margin-bottom: 0.625rem;
+  }
+  .modal-right h2 {
+    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    margin-bottom: 1.25rem;
+  }
+  .modal-right p {
+    font-weight: 400;
+    font-size: 0.8125rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    margin-bottom: 1.25rem;
+  }
+  .modal-right ul {
+    margin-left: 1em;
+  }
+  .modal-right ul > li {
+    color: rgba(241, 205, 179, 1);
+    margin-bottom: 0.375rem;
+  }
+  .modal-right ul > li > h3 {
+    font-weight: 700;
+    font-size: 0.9375rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    color: #000000;
+  }
+  .modal-right ul > li > h3 > span {
+    font-weight: 400;
+  }
+  .modal-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(100%, -100%);
+    width: 3.25rem;
+    height: 3.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #f1cdb3;
+    border-radius: 50%;
+    transition: all 300ms linear;
+  }
+  /* End of Modal Window */
 
   footer {
     padding-top: 1.875rem;
@@ -328,16 +506,29 @@ footer {
     max-width: 100vw;
     padding: 1.875rem 10px;
   }
-
   /* mobile menu */
   .mobile-menu {
-    background-color: #292929;
+    background-color: rgba(255, 255, 255, 1);
     position: fixed;
     top: 0;
     right: 0;
-    width: 100vw;
+    width: 320px;
     height: 100vh;
     z-index: 2;
+    transition: all 300ms linear;
+  }
+  .menu-inactive {
+    transform: translateX(100%);
+  }
+  .mobile-menu-background {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(41, 41, 41, 0.6);
+    display: none;
   }
 
   .menu-top {
@@ -362,14 +553,14 @@ footer {
   }
   .menu a {
     text-decoration: none;
-    color: rgba(205, 205, 205, 1);
+    color: #545454;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-size: 2rem;
     transition: all 300ms linear;
   }
   #active {
-    color: white;
+    color: #292929;
     border-bottom: 3px solid rgba(241, 205, 179, 1);
   }
   .nav-left {
@@ -380,14 +571,14 @@ footer {
     font-size: 2rem;
     text-transform: capitalize;
     font-weight: 400;
-    color: rgba(241, 205, 179, 1);
+    color: #545454;
     font-family: Georgia, 'Times New Roman', Times, serif;
     letter-spacing: 0.06em;
     margin-bottom: 0.5rem;
   }
   .nav-left p {
     font-size: 0.8125rem;
-    color: white;
+    color: #292929;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
     letter-spacing: 0.09rem;
@@ -415,6 +606,99 @@ footer {
     font-size: 1.5675rem;
     margin: 0 auto 2.625rem;
   }
+
+  /* Modal Window */
+  .modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 3;
+    background: rgba(41, 41, 41, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .modal-hidden {
+    display: none;
+  }
+  .modal-content {
+    z-index: 4;
+    background: #fafafa;
+    width: 75vw;
+    height: auto;
+    border-radius: 0.5625rem;
+    display: flex;
+    position: relative;
+  }
+  .modal-left {
+    width: 21.875rem;
+    height: 21.875rem;
+    border-top-left-radius: 0.5625rem;
+    border-bottom-left-radius: 0.5625rem;
+    display: none;
+  }
+  .modal-right {
+    padding: 0.625rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  .modal-right h1 {
+    font-weight: 400;
+    font-size: 2.1875rem;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    text-align: center;
+    margin-bottom: 0.625rem;
+  }
+  .modal-right h2 {
+    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    text-align: center;
+    margin-bottom: 1.25rem;
+  }
+  .modal-right p {
+    font-weight: 400;
+    font-size: 0.8125rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    margin-bottom: 1.5rem;
+    text-align: justify;
+  }
+  .modal-right ul {
+    margin-left: 1em;
+  }
+  .modal-right ul > li {
+    color: rgba(241, 205, 179, 1);
+    margin-bottom: 0.375rem;
+  }
+  .modal-right ul > li > h3 {
+    font-weight: 700;
+    font-size: 0.9375rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    color: #000000;
+  }
+  .modal-right ul > li > h3 > span {
+    font-weight: 400;
+  }
+  .modal-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(70%, -100%);
+    width: 3.25rem;
+    height: 3.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #f1cdb3;
+    border-radius: 50%;
+    transition: all 300ms linear;
+  }
+  /* End of Modal Window */
   .cards {
     display: block;
     margin-bottom: 2.625rem;
@@ -512,13 +796,27 @@ footer {
   }
   /* mobile menu */
   .mobile-menu {
-    background-color: #292929;
+    background-color: rgba(255, 255, 255, 1);
     position: fixed;
     top: 0;
     right: 0;
-    width: 100vw;
+    width: 320px;
     height: 100vh;
     z-index: 2;
+    transition: all 300ms linear;
+  }
+  .menu-inactive {
+    transform: translateX(100%);
+  }
+  .mobile-menu-background {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(41, 41, 41, 0.6);
+    display: none;
   }
 
   .menu-top {
@@ -543,14 +841,14 @@ footer {
   }
   .menu a {
     text-decoration: none;
-    color: rgba(205, 205, 205, 1);
+    color: #545454;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-size: 2rem;
     transition: all 300ms linear;
   }
   #active {
-    color: white;
+    color: #292929;
     border-bottom: 3px solid rgba(241, 205, 179, 1);
   }
   .nav-left {
@@ -561,14 +859,14 @@ footer {
     font-size: 2rem;
     text-transform: capitalize;
     font-weight: 400;
-    color: rgba(241, 205, 179, 1);
+    color: #545454;
     font-family: Georgia, 'Times New Roman', Times, serif;
     letter-spacing: 0.06em;
     margin-bottom: 0.5rem;
   }
   .nav-left p {
     font-size: 0.8125rem;
-    color: white;
+    color: #292929;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
     letter-spacing: 0.09rem;
@@ -596,6 +894,98 @@ footer {
     font-size: 1.5675rem;
     margin: 0 auto 2.625rem;
   }
+  /* Modal Window */
+  .modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 3;
+    background: rgba(41, 41, 41, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .modal-hidden {
+    display: none;
+  }
+  .modal-content {
+    z-index: 4;
+    background: #fafafa;
+    width: 75vw;
+    height: auto;
+    border-radius: 0.5625rem;
+    display: flex;
+    position: relative;
+  }
+  .modal-left {
+    width: 21.875rem;
+    height: 21.875rem;
+    border-top-left-radius: 0.5625rem;
+    border-bottom-left-radius: 0.5625rem;
+    display: none;
+  }
+  .modal-right {
+    padding: 0.625rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  .modal-right h1 {
+    font-weight: 400;
+    font-size: 2.1875rem;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    text-align: center;
+    margin-bottom: 0.625rem;
+  }
+  .modal-right h2 {
+    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    text-align: center;
+    margin-bottom: 1.25rem;
+  }
+  .modal-right p {
+    font-weight: 400;
+    font-size: 0.8125rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    margin-bottom: 1.5rem;
+    text-align: justify;
+  }
+  .modal-right ul {
+    margin-left: 1em;
+  }
+  .modal-right ul > li {
+    color: rgba(241, 205, 179, 1);
+    margin-bottom: 0.375rem;
+  }
+  .modal-right ul > li > h3 {
+    font-weight: 700;
+    font-size: 0.9375rem;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    color: #000000;
+  }
+  .modal-right ul > li > h3 > span {
+    font-weight: 400;
+  }
+  .modal-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(70%, -100%);
+    width: 3.25rem;
+    height: 3.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #f1cdb3;
+    border-radius: 50%;
+    transition: all 300ms linear;
+  }
+  /* End of Modal Window */
   .cards {
     display: block;
     margin-bottom: 2.625rem;
